--- a/part02/string.css
+++ b/part02/string.css
@@ -1,10 +1,3 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    transition: ease-in-out 100ms;
-}
-
 
 body{
     font-family: "Roboto";
@@ -71,7 +64,7 @@ textarea{
     opacity: 0;
 }
 
-@media (max-width: 600px) {
+@media only screen and (max-width: 600px) {
     
     #textAreaDiv{
         display: flex;
