--- a/part05/products.css
+++ b/part05/products.css
@@ -14,6 +14,9 @@ body{
 }
 
 label{
+    text-align: center;
+    word-break: normal;
+    max-width: 90vw;
     font-size: 3rem;
     font-weight: 300;
 }
