--- a/part08/profile.css
+++ b/part08/profile.css
@@ -25,6 +25,10 @@ h1{
     font-size: 3rem;
 }
 
+p{
+    padding: 0.2rem 0;
+}
+
 .input{
     border: none;
     border-radius: 0.5rem;
@@ -45,4 +49,11 @@ h1{
 #saveButton:active{
     color: #FFFF;
     background-color: #000F;
+}
+
+#resultDiv{
+    display: none;
+    width: 400px;
+    max-width: 65vw;
+    word-break: break-all;
 }
