--- a/part09/template-string.css
+++ b/part09/template-string.css
@@ -44,10 +44,12 @@ p{
     background-color: #FFFF;
 }
 
-#sumButton{
+.button{
+    width: auto;
     transition: 100ms;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     font-weight: 600;
+    cursor: pointer;
 }
 
 #sumButton:active{
