--- a/part10/index.css
+++ b/part10/index.css
@@ -104,6 +104,14 @@ tr{
     transition: 0ms;
 }
 
+#searchInput{
+    width: 240px;
+}
+
+#priceColumnHeader{
+    cursor: pointer;
+}
+
 #showModal{
     display: none;
     position: fixed;
