--- a/part14/index.css
+++ b/part14/index.css
@@ -70,7 +70,7 @@ p{
 
 .logoWrapper{
     box-shadow: none;
-    border-radius: 100%;
+    border-radius: 1000px;
     background-color: #0006;
     padding: 2rem;
 }
