--- a/part16/index.css
+++ b/part16/index.css
@@ -80,3 +80,14 @@ button:disabled{
     border-radius: 0.5rem;
     box-shadow: 8px 8px 8px #000F;
 }
+
+@media (max-width: 600px) {
+    #form{
+        width: 90vw;
+        flex-direction: column;
+    }
+
+    #cepInput{
+        
+    }
+}
