--- a/part19/index.css
+++ b/part19/index.css
@@ -29,6 +29,8 @@ h1{
     color: #0A0F;
     font-size: 5rem;
     font-weight: 600;
+    text-align: center;
+    word-break: normal;
     display: flex;
     gap: 2px;
     flex-wrap: wrap;
