--- a/part10/index.css
+++ b/part10/index.css
@@ -158,8 +158,8 @@ tr{
     position: fixed;
     justify-content: center;
     align-items: center;
-    width: 99vw;
-    height: 99vh;
+    width: 100%;
+    height: 100vh;
     top: 0;
     left: 0;
     z-index: 11;
